name:                fay-websockets
version:             0.0.1.0
synopsis:            Websockets FFI library for Fay
description:         Websockets FFI library for Fay
homepage:            https://github.com/swamp-agr/fay-websockets
issues:              https://github.com/swamp-agr/fay-websockets/issues
license:             BSD3
license-file:        LICENSE
author:              Andrey Prokopenko
maintainer:          persiantiger@yandex.ru
copyright:           2018 Andrey Prokopenko
category:            Web, Fay
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  
  ChangeLog.md
  LICENSE
  README.md


source-repository head
  type: git
  location: https://github.com/swamp-agr/fay-websockets.git  

library
  -- exposed-modules:
  -- other-modules:
  -- other-extensions:
  build-depends:
    fay-base >= 0.19.4.0 && < 0.22

  hs-source-dirs:      src
  default-language:    Haskell2010
